@@ -55,9 +55,9 @@ SCons/Tool/mslib.py
 SCons/Tool/mslink.py
 SCons/Tool/msvc.py
 SCons/Tool/nasm.py
-SCons/Tool/Perforce.py
 SCons/Tool/pdflatex.py
 SCons/Tool/pdftex.py
+SCons/Tool/Perforce.py
 SCons/Tool/PharLapCommon.py
 SCons/Tool/RCS.py
 SCons/Tool/SCCS.py
@@ -70,5 +70,6 @@ SCons/Tool/Subversion.py
 SCons/Tool/tar.py
 SCons/Tool/tex.py
 SCons/Tool/yacc.py
+SCons/Tool/zip.py
 SCons/Util.py
 SCons/Warnings.py
